--- a/www/css/fontawesome.css
+++ b/www/css/fontawesome.css
@@ -2,6 +2,17 @@
  * Font Awesome Free 5.8.2 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
+ @font-face{
+	font-family:'FontAwesome';
+	src:url('../fonts/fontawesome-webfont.eot?v=4.6.3');
+	src:url('../fonts/fontawesome-webfont.eot?#iefix&v=4.6.3') format('embedded-opentype'),
+		url('../fonts/fontawesome-webfont.woff2?v=4.6.3') format('woff2'),
+		url('../fonts/fontawesome-webfont.woff?v=4.6.3') format('woff'),
+		url('../fonts/fontawesome-webfont.ttf?v=4.6.3') format('truetype'),
+		url('../fonts/fontawesome-webfont.svg?v=4.6.3#fontawesomeregular') format('svg');
+	font-weight:normal;
+	font-style:normal
+ }
 .fa,
 .fas,
 .far,
@@ -13,6 +24,7 @@
   font-style: normal;
   font-variant: normal;
   text-rendering: auto;
+	font-family:'FontAwesome';
   line-height: 1; }
 
 .fa-lg {
